--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <!-- Feature #2: add columns to the grid -->
     <button onclick="addColumn()">Add Column</button>
 
+    <br>
+
+    <!-- Feature #3: remove rows from the grid -->
+    <button onclick="removeRow()">Remove Row</button>
+
+    <!-- Feature #4: remove columns from the grid -->
+    <button onclick="removeColumn()">Remove Column</button>
+
      <table id="main-grid">
         <tr>
             <td></td>
